cluster/apps/default/wireguard/service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: wireguard
  name: wireguard
  namespace: default
spec:
  type: ClusterIP
  externalTrafficPolicy: Local
  ports:
  - port: 51820
    protocol: UDP
    targetPort: 51820
