cluster/apps/default/wireguard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
  name: external-ingress-wireguard
spec:
  tls:
  - hosts:
    - "wireguard.${SECRET_DOMAIN}"
    secretName: wildcard-cert-tls
  ingressClassName: "nginx"
  rules:
  - host: wireguard.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wireguard
              port:
                number: 51820
